<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Display -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/opDisplay"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom|end"
            android:paddingHorizontal="24dp"
            android:text=""
            android:textSize="28sp"/>

        <TextView
            android:id="@+id/txtDisplay"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="bottom|end"
            android:padding="24dp"
            android:text="@string/lbl_0"
            android:textSize="72sp"/>

    </LinearLayout>

    <!-- Button Container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">

        <!-- Row 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn7"
                style="@style/NumberButton"
                android:text="@string/lbl_7"/>

            <Button
                android:id="@+id/btn8"
                style="@style/NumberButton"
                android:text="@string/lbl_8"/>

            <Button
                android:id="@+id/btn9"
                style="@style/NumberButton"
                android:text="@string/lbl_9"/>

            <Button
                android:id="@+id/btnDivide"
                style="@style/OperatorButton"
                android:text="@string/op_divide"/>

        </LinearLayout>

        <!-- Row 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn4"
                style="@style/NumberButton"
                android:text="@string/lbl_4"/>

            <Button
                android:id="@+id/btn5"
                style="@style/NumberButton"
                android:text="@string/lbl_5"/>

            <Button
                android:id="@+id/btn6"
                style="@style/NumberButton"
                android:text="@string/lbl_6"/>

            <Button
                android:id="@+id/btnMultiply"
                style="@style/OperatorButton"
                android:text="@string/op_multiply"/>

        </LinearLayout>

        <!-- Row 3 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1"
                style="@style/NumberButton"
                android:text="@string/lbl_1"/>

            <Button
                android:id="@+id/btn2"
                style="@style/NumberButton"
                android:text="@string/lbl_2"/>

            <Button
                android:id="@+id/btn3"
                style="@style/NumberButton"
                android:text="@string/lbl_3"/>

            <Button
                android:id="@+id/btnMinus"
                style="@style/OperatorButton"
                android:text="@string/op_minus"/>

        </LinearLayout>

        <!-- Row 4 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnEqual"
                style="@style/EqualButton"
                android:text="@string/btn_equal"/>

            <Button
                android:id="@+id/btn0"
                style="@style/NumberButton"
                android:text="@string/lbl_0"/>

            <Button
                android:id="@+id/btnClear"
                style="@style/ClearButton"
                android:text="@string/btn_clear"/>

            <Button
                android:id="@+id/btnPlus"
                style="@style/OperatorButton"
                android:text="@string/op_plus"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>